--- a/index.html
+++ b/index.html
@@ -41,19 +41,65 @@
                     controle do meio ambiente e da natureza.
                 </p>
             </div>
-        </section><section id="servicos" class="container- container-grid">
+            <section id="parallax"></section>
+
+        </section>
+        <section id="servicos" class="container- container-grid">
             <div class="titulo">
                 <h2>Serviços</h2>
             </div>
             <div class="container-cards">
                 <div class="card">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
+                        <path
+                            d="M216,88.8V72a40,40,0,0,0-40-40H80A40,40,0,0,0,40,72V88.8a40,40,0,0,0,0,78.4V200a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V167.2a40,40,0,0,0,0-78.4ZM80,48h96a24,24,0,0,1,24,24V88.8A40.07,40.07,0,0,0,168,128H88A40.07,40.07,0,0,0,56,88.8V72A24,24,0,0,1,80,48ZM208.39,152H208a8,8,0,0,0-8,8v40H56V160a8,8,0,0,0-8-8h-.39A24,24,0,1,1,72,128v40a8,8,0,0,0,16,0V144h80v24a8,8,0,0,0,16,0V128a24,24,0,1,1,24.39,24Z">
+                        </path>
+                    </svg>
+                    <h3>sala de estar</h3>
+                    <p>Sofa, Hack, mesa de centro, etc;</p>
 
                 </div>
+                <div class="card">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
+                        <path
+                            d="M248,64H8A8,8,0,0,0,8,80h8V192a8,8,0,0,0,16,0V144H224v48a8,8,0,0,0,16,0V80h8a8,8,0,0,0,0-16ZM32,80h88v48H32Zm192,48H136V80h88ZM96,104a8,8,0,0,1-8,8H64a8,8,0,0,1,0-16H88A8,8,0,0,1,96,104Zm64,0a8,8,0,0,1,8-8h24a8,8,0,0,1,0,16H168A8,8,0,0,1,160,104Z">
+                        </path>
+                    </svg>
+                    <h3>Cozinha</h3>
+                    <p>Armario, Mesa de Jantar, Cristalera, Cadeiras, etc;</p>
+                </div>
+                <div class="card">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="96" height="96" fill="#000000" viewBox="0 0 256 256">
+                        <path
+                            d="M216,72H32V48a8,8,0,0,0-16,0V208a8,8,0,0,0,16,0V176H240v32a8,8,0,0,0,16,0V112A40,40,0,0,0,216,72ZM32,88h72v72H32Zm88,72V88h96a24,24,0,0,1,24,24v48Z">
+                        </path>
+                    </svg>
+
+                    <h3>Quarto</h3>
+                    <p>Cama, Quarda-Roupa, Ecrivaninha, Sapateira;</p>
+                </div>
             </div>
+            <section id="contato">
+                <div class="titulo">
+
+                    <h2>Contate-nos</h2>
+                </div>
+                <form action="">
+                    <div class="campo">
+                        <label for="campo-nome">NOME</label>
+                        <input type="text" id="Campo-nome" placeholder="Digte o seu nome...">
+                    </div>
+                    <div class="campo">
+                        <label for="campo-email">G-MAIL?</label>
+                        <input type="email" id="campo-email" placeholder="Digite seu e-mail...">
+                    </div>
+                     <label for="campo-email">G-MAIL?</label>
+                        <input type="email" id="campo-email" placeholder="Digite seu e-mail...">
+            </section>
 
 
 
-        </div>
+            </div>
     </main>
 
 </body>
