--- a/index.html
+++ b/index.html
@@ -79,22 +79,8 @@
                     <p>Cama, Quarda-Roupa, Ecrivaninha, Sapateira;</p>
                 </div>
             </div>
-            <section id="contato">
-                <div class="titulo">
-
-                    <h2>Contate-nos</h2>
-                </div>
-                <form action="">
-                    <div class="campo">
-                        <label for="campo-nome">NOME</label>
-                        <input type="text" id="Campo-nome" placeholder="Digte o seu nome...">
-                    </div>
-                    <div class="campo">
-                        <label for="campo-email">G-MAIL?</label>
-                        <input type="email" id="campo-email" placeholder="Digite seu e-mail...">
-                    </div>
-                     <label for="campo-email">G-MAIL?</label>
-                        <input type="email" id="campo-email" placeholder="Digite seu e-mail...">
+            <section>
+                
             </section>
 
 
